20060523 code: added dir_name, base_name and tests.
20060524 code: added str_ndiff and changed str_same, str_nsame to
               macros.
20060524 code: fixed t_base_name and t_dir_name tests for the above.
20060524 code: added env and tests.
20060526 code: large changes to fmt and scan.
               fmt and scan functions that operate on specific sized
               integers have been moved into fmt_spec.h and scan_spec.h
               respectively. fmt and scan functions that operate on
               specific sized floats have been moved into fmt_fspec.h
               and scan_fspec.h respectively. fmt and scan now use
               standard C integers by default.
20060526 version: corelib-0.33 (no release)
20060527 code: misc source cleanups everywhere.
20060603 code: alloc now calls malloc() instead of calloc().
20060604 code: updated error and installer
20060604 code: corelib-config
20060608 code: updated to new installer and deinstaller
20060608 code: test adjustments for base_name and dir_name
20060608 code: modified corelib-config interface
20060612 code: parameters reordered in some of the older APIs for
               uniformity.
20060614 code: portability updates for OS X
20060614 code: updated sysdeps
20060620 code: updated sysdeps
20060620 code: linux-ppc fix for t_get_opt
20060627 code: changed to unsigned longs for paranoid type safety.
20060627 code: removed str_copy and str_ncopy.
20060705 code: header format change from sysdeps
20060705 code: darwin libname compat
20060705 version: corelib-0.40
20060706 code: hpux -> hp-ux in sysdep-subs.
20060709 code: fd_dup now uses the atomic fd_dup2 if available.
20060718 code: bin_same now a macro.
20060718 code: bin_diff interface changed to match str_diff (why was
               this not done before?).
20060718 code: bin_char and bin_rchar added with tests.
20060718 code: sgetline_get now uses bin_char instead of bin_chr.
20060718 code: sgetline_get now returns blank lines instead of skipping.