@@ -165,12 +165,14 @@ struct install_item insthier[] = {
   {IOP_COPY, "sstring_init.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "sstring_trunc.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "stalloc.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
+  {IOP_COPY, "str_char.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_chr.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_diff.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_dup.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_ends.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_len.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_ndiff.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
+  {IOP_COPY, "str_rchar.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_rchr.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_starts.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
   {IOP_COPY, "str_tolower.c", 0, ctxt_repos, 0444, ctxt_owner, ctxt_group},
