@@ -1,9 +1,11 @@
+str_char.o
 str_chr.o
 str_diff.o
 str_dup.o
 str_ends.o
 str_len.o
 str_ndiff.o
+str_rchar.o
 str_rchr.o
 str_starts.o
 str_tolower.o
