@@ -135,3 +135,4 @@
 20060718 code: bin_char and bin_rchar added with tests.
 20060718 code: sgetline_get now uses bin_char instead of bin_chr.
 20060718 code: sgetline_get now returns blank lines instead of skipping.
+20060718 code: str_char and str_rchar added with tests.
